--- a/frontend/src/app/task/pages/task-form/task-form.component.html
+++ b/frontend/src/app/task/pages/task-form/task-form.component.html
@@ -116,7 +116,7 @@
             <button 
                 type="button" 
                 class="btn btn-outline-light"
-                routerLink="/tasks"
+                routerLink="/dashboard/tasks"
             >
                 <i class="fa fa-times" aria-hidden="true"></i>
                 Cancel
